fix: h1 on background movie on small devices

--- a/src/components/BackgroundMovie/styles.module.scss
+++ b/src/components/BackgroundMovie/styles.module.scss
@@ -90,6 +90,9 @@
 
   @media (max-width: 360px) {
     width: 300px;
+    h1 {
+      font-size: 40px;
+    }
   }
 
   .background_description_block {
